--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git VSCODE</title>
 </head>
-    <h1>"holi ahora el "</h1>
+    <h1>"holi  "</h1>
+    
     <h1>"    ddss   "</h1>
 <body>
 </body>
